hphp/test/quick/no_arg_class_alias.php.expectf
Fatal error: Uncaught exception 'RuntimeException' with message 'class_alias() expects at least 2 parameters, 0 given' in %s/hphp/test/quick/no_arg_class_alias.php:4
Stack trace:
%A
